--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
             <img src="professeur.png" alt="Professeur magicien" style="max-width: 100%; max-height: 100%; object-fit: contain;"/>
           </div>
           <div class="btns">
-            <button class="btn play" type="button" id="btnPlay" aria-pressed="false">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M8 5v14l11-7z"/></svg>
-              <span>Play</span>
+            <button class="btn play" type="button" id="btnPlay" aria-pressed="false" aria-label="Play">
+              <img src="icone_play.png" alt="Play" width="32" height="32"/>
             </button>
-            <button class="btn pause" type="button" id="btnPause" aria-pressed="false">
-              <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true"><path d="M6 5h4v14H6zM14 5h4v14h-4z"/></svg>
-              <span>Pause</span>
+            <button class="btn pause" type="button" id="btnPause" aria-pressed="false" aria-label="Pause">
+              <img src="icone_pause.png" alt="Pause" width="32" height="32"/>
             </button>
           </div>
         </section>
